--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -82,6 +82,15 @@
 
     <!-- Orders -->
     <string name="orders_title">My orders</string>
+    <string name="orders_loading">Loading orders…</string>
+    <string name="orders_empty">No orders yet</string>
+
+    <string name="order_details_title">Order details</string>
+    <string name="order_details_loading">Loading order…</string>
+    <string name="order_status">Status</string>
+    <string name="order_items">Items</string>
+    <string name="orders_coming">Coming orders</string>
+    <string name="orders_summary">%1$d items • %2$s</string>
 
 
 </resources>
